Weblate/update translations (#137)
Co-authored-by: qwrtln <qwrtln@users.noreply.hosted.weblate.org>
Co-authored-by: github-actions <github-actions@github.com>

--- a/translations/inferno_steadwicks_fall.tex/pl.po
+++ b/translations/inferno_steadwicks_fall.tex/pl.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2024-10-22 22:57+0200\n"
-"PO-Revision-Date: 2024-10-29 23:06+0000\n"
-"Last-Translator: krazanas <krazi321@gmail.com>\n"
+"PO-Revision-Date: 2024-10-30 08:58+0000\n"
+"Last-Translator: qwrtln <qwrtln@users.noreply.hosted.weblate.org>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/homm3bg-fan-made-"
 "mission-book/campaigns/inferno_steadwicks_fall/pl/>\n"
 "Language: pl\n"
@@ -714,8 +714,8 @@ msgid ""
 msgstr ""
 "\\textbf{11. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Przeczytaj: ,,Otrzymujesz raport z południa. Nasze siły nadal rzucają się na drogę armii Katarzyny,\n"
-"    ale ona nadal marszuje na północ. Masz najwyżej trzy lub cztery tygodnie, zanim dotrze do stolicy.''\n"
+"\\item Przeczytaj: ,,Otrzymujesz raport z południa. Nasze siły nadal rzucają się na drogę armii Katarzyny, \n"
+"ale ona nadal maszeruje na północ. Masz najwyżej trzy lub cztery tygodnie, zanim dotrze do stolicy.''\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -732,8 +732,8 @@ msgid ""
 msgstr ""
 "\\textbf{13. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Ostrzeżenie: ,,Marsz Katarzyny trwa -- jej siły są tylko dwa tygodnie stąd. Jeśli się nie pospieszysz,\n"
-"    nie zdążymy zabezpieczyć stolicy przed jej przybyciem.''\n"
+"\\item Ostrzeżenie: ,,Marsz Katarzyny trwa -- jej siły są tylko dwa tygodnie stąd. Jeśli się nie pospieszysz, \n"
+"nie zdążymy zabezpieczyć stolicy przed jej przybyciem.''\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -750,8 +750,7 @@ msgid ""
 msgstr ""
 "\\textbf{15. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Ostrzeżenie: ,,Twoi zwiadowcy zgłaszają widok armii Katarzyny siedem dni na południowy zachód. Jeśli\n"
-"    dotrze do stolicy przed tobą, wszystko jest stracone.''\n"
+"\\item Ostrzeżenie: ,,Twoi zwiadowcy zgłaszają widok armii Katarzyny siedem dni na południowy zachód. Jeśli dotrze do stolicy przed tobą, wszystko jest stracone.''\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -769,9 +768,9 @@ msgid ""
 msgstr ""
 "\\textbf{16. Runda:}\n"
 "\\begin{itemize}\n"
-"  \\item Jeśli Steadwick nie zostało zdobyte, przeczytaj: ,,Dziś rano ogromna armia pod dowództwem Katarzyny\n"
-"    Ironfist dotarła do erackiej stolicy Steadwick. Nie mamy innego wyboru, jak tylko wycofać nasze siły.\n"
-"    Zawiodłeś nas... okropnie.''\n"
+"\\item Jeśli Steadwick nie zostało zdobyte, przeczytaj: ,,Dziś rano ogromna armia pod dowództwem Katarzyny\n"
+"Ironfist dotarła do erackiej stolicy Steadwick. Nie mamy innego wyboru, jak tylko wycofać nasze siły.\n"
+"Zawiodłeś nas... okropnie.''\n"
 "\\end{itemize}\n"
 "\n"
 
