--- a/translations/titans_stronghold.tex/fr.po
+++ b/translations/titans_stronghold.tex/fr.po
@@ -7,14 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
 "POT-Creation-Date: 2024-10-25 16:19+0200\n"
-"PO-Revision-Date: 2024-06-29 16:10+0200\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"PO-Revision-Date: 2024-11-01 11:30+0000\n"
+"Last-Translator: qwrtln <qwrtln@users.noreply.hosted.weblate.org>\n"
+"Language-Team: French <https://hosted.weblate.org/projects/homm3bg-fan-made-"
+"mission-book/coop-scenarios/titans_stronghold/fr/>\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=2; plural=n > 1;\n"
+"X-Generator: Weblate 5.8.2-dev\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
@@ -30,6 +32,8 @@ msgid ""
 "{2}\n"
 "\n"
 msgstr ""
+"{2}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:16 coops/titans_stronghold.tex:18
@@ -41,6 +45,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Scenario Length}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Durée du scenario}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:20 coops/titans_stronghold.tex:22
@@ -53,6 +59,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Player Setup}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Préparation des joueurs}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:26 coops/titans_stronghold.tex:28
@@ -62,6 +70,8 @@ msgid ""
 "\\textbf{Starting Income:} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
+"\\textbf{Ressources de départ :} 10 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:40 coops/titans_stronghold.tex:42
@@ -74,6 +84,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Préparation du plateau}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:57 coops/titans_stronghold.tex:61
@@ -85,6 +97,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Victory Conditions}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Condition de victoire}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:61 coops/titans_stronghold.tex:65
@@ -96,6 +110,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Defeat Conditions}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Condition de défaite}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:67 coops/titans_stronghold.tex:69
@@ -109,6 +125,8 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Événement programmés}}\n"
+"\n"
 
 #. type: multicols*
 #: coops/sentinels.tex:149 coops/titans_stronghold.tex:108
@@ -119,6 +137,8 @@ msgid ""
 "\\vspace*{\\fill}\n"
 "\n"
 msgstr ""
+"\\vspace*{\\fill}\n"
+"\n"
 
 #.  !TeX spellcheck = en_US
 #. type: Plain text
@@ -127,6 +147,8 @@ msgid ""
 "\\addscenariosection{1}{Cooperative Scenario}{Titans' Stronghold}{\\images/"
 "earthquake.png}"
 msgstr ""
+"\\addscenariosection{1}{Mode coopératif}{La forteresse des Titans}{\\images/"
+"earthquake.png}"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:7 coops/emerald_island.tex:7
@@ -135,6 +157,8 @@ msgid ""
 "\\textbf{Author:} Invoceusse\n"
 "\n"
 msgstr ""
+"\\textbf{Auteur :} Invoceusse\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:9
@@ -143,6 +167,8 @@ msgid ""
 "\\textbf{Source:} \\href{https://discord.com/channels/740870068178649108/1219333721019256943}{Archon Studio Discord}\n"
 "\n"
 msgstr ""
+"\\textbf{Source :} \\href{https://discord.com/channels/740870068178649108/1219333721019256943}{Archon Studio Discord}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:16
@@ -156,6 +182,13 @@ msgid ""
 "}\n"
 "\n"
 msgstr ""
+"\\textit{Il y a très longtemps, une puissante forteresse a été construite pour abriter les fantastiques et meurtriers Titans.\n"
+"  Personne n'y est jamais entré et n'est revenu pour raconter l'histoire.\n"
+"  Depuis, des rumeurs font état de la mort des gardiens et d'une quantité incroyable de trésors encore à l'intérieur, parmi lesquels pourrait se trouver le meilleur arc du monde.\\\\\n"
+"  Si la légende comme quoi le fort est vraie, il est temps de procéder à des fouilles.\\\\\n"
+"  Mais pour l'instant, vous et vos alliés devez trouver les clés disséminées dans Antagarich pour pouvoir ouvrir la porte de la Forteresse des Titans.\n"
+"}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:20
@@ -164,6 +197,8 @@ msgid ""
 "This Scenario is played over 16 Rounds (15 on Impossible difficulty).\n"
 "\n"
 msgstr ""
+"Ce scénario se joue en 16 manches maximum (15 en difficulté impossible).\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:24
@@ -172,6 +207,8 @@ msgid ""
 "\\textbf{Player Count:} 1 -- 6\n"
 "\n"
 msgstr ""
+"\\textbf{Nombre de joueurs :} 1 -- 6\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:26
@@ -180,6 +217,8 @@ msgid ""
 "\\textbf{Starting Resources:} 30 \\svg{gold}, 8 \\svg{building_materials}, 2 \\svg{valuables}\n"
 "\n"
 msgstr ""
+"\\textbf{Ressources de départ :} 30 \\svg{gold}, 8 \\svg{building_materials}, 2 \\svg{valuables}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:34 coops/emerald_island.tex:30
@@ -192,6 +231,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{Unités de départ :}\n"
+"\\begin{itemize}\n"
+"  \\item Un groupe d'unité \\svgunit{bronze}  de votre choix.\n"
+"  \\item Quelques unités \\svgunit{bronze} de votre choix.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:36
@@ -200,6 +245,8 @@ msgid ""
 "\\textbf{Town Buildings:} None\n"
 "\n"
 msgstr ""
+"\\textbf{Bâtiments de départ :} Aucun\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:38 clash/dragoncurse_castle.tex:36
@@ -208,6 +255,8 @@ msgid ""
 "\\textbf{Map Tile Pool:} None\n"
 "\n"
 msgstr ""
+"\\textbf{Réserve de tuile :} Aucune\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:40 coops/emerald_island.tex:36
@@ -218,6 +267,8 @@ msgid ""
 "\\textbf{Additional Bonus:} None\n"
 "\n"
 msgstr ""
+"\\textbf{Bonus de départ :} Aucun\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:44 coops/emerald_island.tex:40
@@ -226,6 +277,8 @@ msgid ""
 "Take the following Map Tiles and arrange them as shown in the Scenario map layout ($P$ stands for the number of players):\n"
 "\n"
 msgstr ""
+"Prenez les tuiles suivantes et disposez-les comme indiqué sur le schéma du scénario ($J$ représente le nombre de joueurs):\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:50
@@ -238,6 +291,12 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"$\\boldsymbol{J}$ \\textbf{× Tuiles de départ (I)}\n"
+"\\begin{itemize}\n"
+"  \\item Prendre les tuiles de départ des factions choisies.\n"
+"  \\item Ignorez leur bordure jaune.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:52
@@ -246,6 +305,8 @@ msgid ""
 "$\\boldsymbol{2 P}$ \\textbf{× Far (II--III) Map Tile}\n"
 "\n"
 msgstr ""
+"$\\boldsymbol{2 J}$ \\textbf{× Tuiles lointaines (II--III)}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:54
@@ -254,6 +315,8 @@ msgid ""
 "$\\boldsymbol{2 P}$ \\textbf{× Near (IV--V) Map Tile}\n"
 "\n"
 msgstr ""
+"$\\boldsymbol{2 J}$ \\textbf{× Tuiles proches (IV--V)}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:56
@@ -262,6 +325,8 @@ msgid ""
 "$\\boldsymbol{(P + 1)}$ \\textbf{× Center (VI--VII) Map Tile}\n"
 "\n"
 msgstr ""
+"$\\boldsymbol{(J + 1)}$ \\textbf{× tuiles centrales (VI--VII)}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:59
@@ -271,6 +336,9 @@ msgid ""
 "The center of this Tile is the Titans' Stronghold.\n"
 "\n"
 msgstr ""
+"Si vous n'avez plus suffisamment de tuile VI--VII, vous pouvez utiliser une autre tuile à mettre à côté des tuiles I.\n"
+"Le centre de cette tuile est la Forteresse des Titans.\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:63
@@ -279,6 +347,8 @@ msgid ""
 "Kill all Units in the Titans' Stronghold (the center of Tile VI--VII next to Tiles I).\n"
 "\n"
 msgstr ""
+"Tuez toutes les unités dans la forteresse des titans (le centre de la tuile VI--VII proches des tuiles I).\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:67
@@ -287,6 +357,8 @@ msgid ""
 "There are undefeated Units left in the Titans' Stronghold at the end of Round 16 (15 on Impossible difficulty).\n"
 "\n"
 msgstr ""
+"S'il reste des unités invaincues dans la forteresse des titans à la fin du tour 16 (15 en difficulté impossible).\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:74
@@ -298,6 +370,11 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\textbf{4$^{e}$, 8$^{e}$ et 12$^{e}$ tours :}\n"
+"\\begin{itemize}\n"
+"  \\item Retirez tous les cubes noirs des moulins à eau, moulin à vent et jardins mystique sur le plateau.\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:76
@@ -306,6 +383,8 @@ msgid ""
 "\\vspace*{\\fill}\\columnbreak\n"
 "\n"
 msgstr ""
+"\\vspace*{\\fill}\\columnbreak\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:81
@@ -317,6 +396,11 @@ msgid ""
 "  \\item No one can enter the Titans' Stronghold until all other VII Fields are flagged by any player.\n"
 "\n"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Règles additionnelles du scénario}}\n"
+"\\begin{itemize}\n"
+"  \\item Rappel : Le centre de la tuile VI--VII adjacente aux tuiles I est la forteresse des titans.\n"
+"  \\item Personne ne peut entrer dans la forteresse des titans tant que toutes les autres case VII ne sont pas revendiqués par au moins un joueur.\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:90
@@ -332,6 +416,15 @@ msgid ""
 "  (There is no bonus in solo play!)\n"
 "\n"
 msgstr ""
+"  \\item Après avoir vaincus une armée neutre de difficulté VII, à la place de résouvre la case, le joueurs choisis 3 options dans la liste suivante (une même option peut-être choisis plusieurs fois) :\n"
+"    \\begin{itemize}\n"
+"      \\item Un autre joueur (de votre choix) gagne 5\\,\\svg{gold}\n"
+"      \\item Un autre joueur (de votre choix) gagne 2\\,\\svg{building_materials}\n"
+"      \\item Un autre joueur (de votre choix) gagne 1\\,\\svg{valuables}\n"
+"    \\end{itemize}\n"
+"  Ensuite, revendiqué la case VII avec un cube de votre faction.\n"
+"  (Il n'y a pas de bonus pour un jeu en solitaire !)\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:94
@@ -342,6 +435,10 @@ msgid ""
 "  \\item Two players can use their build Tokens to exchange Artifacts and/or Spells.\n"
 "\n"
 msgstr ""
+"  \\item Ignorez toutes les bordures jaunes sur les tuiles de départ (I).\n"
+"  \\item Vous pouvez utiliser votre jeton de construction pour pouvoir donner des ressources à un autre joueur.\n"
+"  \\item Deux joueurs peuvent utiliser leur jeton de construction pour pouvoir échanger des artefacts et/ou des sorts.\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:97
@@ -351,6 +448,9 @@ msgid ""
 "  \\item When all VII Fields (excluding the Titans' Stronghold) are flagged, randomly draw and shuffle the specified number (see the next page) of Neutral Unit Cards from each of their corresponding Decks to create a separate Deck of Neutral Units for the Titans' Stronghold (the Deck of the Titans' Stronghold is sometimes split in two because certain Scenarios are otherwise impossible to implement with the Cards from certain expansions).\n"
 "\n"
 msgstr ""
+"  \\item A chaque fois qu'un joueur se déplace sur un obélisque, il lance un dé de ressource et 1 dé de trésor, et choisit 1 résultat.\n"
+"  \\item Quand toutes les cases VII (à l'exception de la forteresse des titans) sont revendiquées, Tirez au hasard le nombre spécifié (voir page suivante) d'unité neutre de chaque pile correspondante afin de former un paquet d'unités distinctes utilisé pour les combats dans la forteresse des titans (Le paquet de la forteresse des titans est certaine fois coupé en deux paquets (le deuxième est à composé après avoir fini le premier) car sinon certaine configuration serais impossible à implémenter en fonction des extensions possédées).\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:106
@@ -366,6 +466,15 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"  \\item Chaque fois qu'un héros entre dans la forteresse des titans, il pioche 5 cartes du paquet de l'armée de la forteresse des titans à la place des piles habituelles. Ces unités sont placées sur le plateau de combat (voir page 29 du livre de règles, ``Préparation des unités neutres''). Le joueur doit tenter de vaincre les créatures aussi piochées. Toutes les unités neutres vaincus sont remises dans leurs piles d'unités neutres respectives, plutôt que dans le paquet spécial. Toutes les unités neutres qui survivent à un combat dans la forteresse des titans sont remélangées dans le paquet de l'armée de la forteresse des titans. S'il y reste moins de 5 unités dans le paquet de l'armée de la forteresse des titans, placez uniquement les unités restantes sur le plateau combat.\n"
+"  \\item Prolonger un combat dans la forteresse des titans coute un point de déplacement (comme pour un combat contre des unités non azure).\n"
+"  \\item Par ailleurs, les joueurs ne peuvent pas :\n"
+"  \\begin{itemize}\n"
+"    \\item Attaquer les autres Héros.\n"
+"    \\item Capturer une Mine ou une Enclave déjà contrôlée.\n"
+"  \\end{itemize}\n"
+"\\end{itemize}\n"
+"\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:112
@@ -376,6 +485,10 @@ msgid ""
 "\\end{center}\n"
 "\n"
 msgstr ""
+"\\begin{center}\n"
+"  \\includegraphics[width=0.55\\linewidth]{\\art/dimension_door.png}\n"
+"\\end{center}\n"
+"\n"
 
 #. type: Plain text
 #: coops/titans_stronghold.tex:187
@@ -422,6 +535,47 @@ msgid ""
 "Then\\linebreak 3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ "
 "\\end{tabularx} }"
 msgstr ""
+"\\hommtable[]{28}{ \\centering \\medskip \\textbf{Force des armées dans la "
+"forteresse des titans}\\\\ \\bigskip \\newcommand{\\bronze}[0]{\\svg[12]"
+"{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}"
+"[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
+"\\begin{tabularx}{\\linewidth}{p{0.15\\linewidth}XXXX} & \\darkcell{Facile} "
+"& \\darkcell{Normal} & \\darkcell{Difficile} & \\darkcell{Impossible}\\\\ "
+"\\darkcell[1.2]{1 joueur} & \\lightcell[1.2]{3\\bronze 2\\silver 1\\golden "
+"1\\azure} & \\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 1\\azure} & "
+"\\lightcell[1.2]{2\\bronze 2\\silver 2\\golden 2\\azure} & \\lightcell[1.2]"
+"{1\\bronze 2\\silver 2\\golden 3\\azure}\\\\ \\darkcell[1.2]{2 joueurs} & "
+"\\lightcell[1.2]{5\\bronze 5\\silver 3\\golden 1\\azure} & \\lightcell[1.2]"
+"{4\\bronze 5\\silver 3\\golden 2\\azure} & \\lightcell[1.2]{2\\bronze "
+"5\\silver 5\\golden 3\\azure} & \\lightcell[1.2]{1\\bronze 5\\silver "
+"7\\golden 4\\azure}\\\\ \\darkcell[1.8]{3 joueurs} & \\lightcell[1.8]"
+"{8\\bronze 7\\silver 4\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze "
+"7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{2\\bronze 3\\silver "
+"4\\golden 3\\azure \\linebreak Puis\\linebreak 2\\bronze 4\\silver 3\\golden "
+"2\\azure} & \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden 3\\azure "
+"\\linebreak Puis\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}\\\\ "
+"\\darkcell[1.8]{4 joueurs} & \\lightcell[1.8]{10\\bronze 10\\silver "
+"6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver 6\\golden "
+"4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden 3\\azure "
+"\\linebreak Puis\\linebreak 2\\bronze 5\\silver 5\\golden 3\\azure} & "
+"\\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak "
+"Puis\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ \\darkcell[1.8]"
+"{5 joueurs} & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden 1\\azure "
+"\\linebreak Puis\\linebreak 7\\bronze 6\\silver 3\\golden 2\\azure} & "
+"\\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak "
+"Puis\\linebreak 5\\bronze 6\\silver 4\\golden 3\\azure} & \\lightcell[1.8]"
+"{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak Puis\\linebreak "
+"3\\bronze 6\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{1\\bronze "
+"6\\silver 8\\golden 6\\azure \\linebreak Puis\\linebreak 2\\bronze 6\\silver "
+"8\\golden 5\\azure}\\\\ \\darkcell[1.7]{6 joueurs} & \\lightcell[1.8]"
+"{8\\bronze 8\\silver 4\\golden 1\\azure \\linebreak Puis\\linebreak "
+"7\\bronze 7\\silver 5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze "
+"8\\silver 4\\golden 3\\azure \\linebreak Puis\\linebreak 6\\bronze 7\\silver "
+"5\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden "
+"5\\azure \\linebreak Puis\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} "
+"& \\lightcell[1.8]{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak "
+"Puis\\linebreak 3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ "
+"\\end{tabularx} }"
 
 #. type: center
 #: coops/titans_stronghold.tex:193
@@ -429,33 +583,35 @@ msgid ""
 "\\transparent{0.3}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]"
 "{\\art/land_mine.png}}"
 msgstr ""
+"\\transparent{0.3}{\\includegraphics[width=0.6\\linewidth, keepaspectratio]"
+"{\\art/land_mine.png}}"
 
 #. type: minipage
 #: coops/titans_stronghold.tex:231
 msgid "\\captionof{figure}{\\textbf{1-PLAYER SCENARIO}}"
-msgstr ""
+msgstr "\\captionof{figure}{\\textbf{SCENARIO POUR 1 JOUEUR}}"
 
 #. type: minipage
 #: coops/titans_stronghold.tex:231
 msgid "\\captionof{figure}{\\textbf{2-PLAYER SCENARIO}}"
-msgstr ""
+msgstr "\\captionof{figure}{\\textbf{SCENARIO POUR 2 JOUEURS}}"
 
 #. type: minipage
 #: coops/titans_stronghold.tex:231
 msgid "\\captionof{figure}{\\textbf{3-PLAYER SCENARIO}}"
-msgstr ""
+msgstr "\\captionof{figure}{\\textbf{SCENARIO POUR 3 JOUEURS}}"
 
 #. type: minipage
 #: coops/titans_stronghold.tex:231
 msgid "\\captionof{figure}{\\textbf{4-PLAYER SCENARIO}}"
-msgstr ""
+msgstr "\\captionof{figure}{\\textbf{SCENARIO POUR 4 JOUEURS}}"
 
 #. type: minipage
 #: coops/titans_stronghold.tex:231
 msgid "\\captionof{figure}{\\textbf{5-PLAYER SCENARIO}}"
-msgstr ""
+msgstr "\\captionof{figure}{\\textbf{SCENARIO POUR 5 JOUEURS}}"
 
 #. type: minipage
 #: coops/titans_stronghold.tex:231
 msgid "\\captionof{figure}{\\textbf{6-PLAYER SCENARIO}}"
-msgstr ""
+msgstr "\\captionof{figure}{\\textbf{SCENARIO POUR 6 JOUEURS}}"
