Change wrap-po mode for po files

--- a/main_fr.tex
+++ b/main_fr.tex
@@ -8,7 +8,7 @@
 
 \def\sections{sections/translated/fr}
 \def\coopspath{coops/translated/fr}
-\def\coopstitle{Cooperative Scenarios}
+\def\coopstitle{Mode coopératif}
 \def\clashpath{clash/translated/fr}
 \def\clashtitle{Clash Scenarios}
 \def\campaignspath{campaigns/translated/fr}
