Translate French stuff

--- a/main_fr.tex
+++ b/main_fr.tex
@@ -8,14 +8,14 @@
 
 \def\sections{sections/translated/fr}
 \def\coopspath{coops/translated/fr}
-\def\coopstitle{Mode coopératif}
+\def\coopstitle{Scénarios Coopératif}
 \def\clashpath{clash/translated/fr}
-\def\clashtitle{Clash Scenarios}
+\def\clashtitle{Scénario d'affrontement}
 \def\campaignspath{campaigns/translated/fr}
-\def\campaignstitle{Campaigns}
+\def\campaignstitle{Campagne}
 \def\lang_header_adjustment{0px}
 
-\newcommand{\authortext}{By The Community}
+\newcommand{\authortext}{Par la communauté}
 \newcommand{\versionlabel}{Version}
 \newcommand{\versionwarning}{Ceci est une version non-éditée créée sur GitHub à partir du commit}
 
@@ -27,6 +27,6 @@
 
 \newcommand{\qrgithub}{Scannez pour ouvrir le dépôt \textbf{GitHub}.}
 
-\title{\includegraphics[width=6cm]{\images/title.png}\\Fan-Made Mission Book}
+\title{\includegraphics[width=6cm]{\images/title.png}\\Livre de mission fait par les fans}
 
 \input{metadata.tex}
