--- a/translations/dragoncurse_castle.tex/cs.po
+++ b/translations/dragoncurse_castle.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-10-17 21:57+0200\n"
+"POT-Creation-Date: 2024-10-22 22:59+0200\n"
 "PO-Revision-Date: 2024-07-31 22:11+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -132,8 +132,7 @@ msgid ""
 "\\addscenariosection{1}{Clash Scenario}{Dragoncurse Castle}{\\images/"
 "town_portal.png}"
 msgstr ""
-"\\addscenariosection{1}{Střet}{Hrad Dračí Kletby}{\\images/"
-"town_portal.png}"
+"\\addscenariosection{1}{Střet}{Hrad Dračí Kletby}{\\images/town_portal.png}"
 
 #. type: multicols*
 #: clash/dragoncurse_castle.tex:7
