Move Castle campaign from Draft to Mission Book
Do translations

--- a/campaigns/inferno_steadwicks_fall.tex
+++ b/campaigns/inferno_steadwicks_fall.tex
@@ -206,7 +206,9 @@ During this ``Inferno'' Campaign Scenario, the following rules apply:
 \end{itemize}
 
 \vspace*{\fill}
-\includegraphics[width=\linewidth, keepaspectratio]{\art/griffin.png}
+\begin{center}
+  \framedimage[0.9\linewidth]{\art/demon.jpg}
+\end{center}
 \vspace*{\fill}
 
 \end{multicols*}
