--- a/campaigns/main.tex
+++ b/campaigns/main.tex
@@ -11,3 +11,15 @@
 \clearpage
 
 \input{\campaignspath/inferno_deal_with_the_devil.tex}
+
+\clearpage
+
+\input{campaigns/castle_greek_gift.tex}
+
+\clearpage
+
+\input{campaigns/castle_sicilian_dragon.tex}
+
+\clearpage
+
+\input{campaigns/castle_two_knights_defense.tex}
