--- a/campaigns/castle_greek_gift.tex
+++ b/campaigns/castle_greek_gift.tex
@@ -169,7 +169,7 @@ A magnificently terrifying azure hue wafted from a Ghost Dragon's massive, exten
 
 While Catherine trusted her horse, having fought tooth and nail with the battle-hardened steed for as long as she could remember, it shuddered in hesitation as they approached the majestic, columned main building of the settlement.
 Catherine had also felt the almost unsettling holy power in the area when, suddenly, the sound of rushing wings caught her attention.
-Her gaze snapped upward to catch sight of something approaching. 
+Her gaze snapped upward to catch sight of something approaching.
 
 The early morning sun was bright, and the figure that swooped low was in front of it.
 The silhouette of wings was visible, and Catherine thought it to be a Gryphon at first.
@@ -241,7 +241,7 @@ Steadwick was burning.
 
 Rion quickly caught up to her, his horse panting as hard as he was.
 He began to speak but couldn't find the words as his mind raced.
-Instead, he placed a hand on his queen's shoulder. 
+Instead, he placed a hand on his queen's shoulder.
 
 The necromancer had played his opening move and won.
 
@@ -267,7 +267,7 @@ If we want to save Steadwick, we have to end him before he can further strengthe
 \columnbreak
 
 \begin{center}
-\raisebox{0pt}[\dimexpr\height-0.2\baselineskip\relax]{\framedimage[0.8\linewidth]{\art/ghost_dragon.jpg}}
+  \framedimage[0.8\linewidth]{\art/ghost_dragon.jpg}
 \end{center}
 
 \end{multicols*}
