--- a/campaigns/castle_sicilian_dragon.tex
+++ b/campaigns/castle_sicilian_dragon.tex
@@ -93,8 +93,6 @@ Place a Necropolis Hero on the center Field of the S1 Necropolis Tile.
 
 \end{multicols*}
 
-\newpage
-
 \begin{multicols}{2}
 
 \subsection*{\MakeUppercase{Timed Events}}
@@ -118,8 +116,6 @@ Place a Necropolis Hero on the center Field of the S1 Necropolis Tile.
 \begin{itemize}
   \item Read ``The Escape'' section
 \end{itemize}
-
-
 
 \subsection*{\MakeUppercase{Additional rules}}
 
@@ -272,7 +268,7 @@ Steadwick will never be safe otherwise!''
 
 \vspace{2em}
 \begin{center}
-  \raisebox{0pt}[\dimexpr\height-0.2\baselineskip\relax]{\framedimage[0.75\linewidth]{\art/necropolis_town.jpg}}
+  \framedimage[0.75\linewidth]{\art/necropolis_town.jpg}
 \end{center}
 
 \end{multicols*}
