--- a/campaigns/main.tex
+++ b/campaigns/main.tex
@@ -14,12 +14,12 @@
 
 \clearpage
 
-\input{campaigns/castle_greek_gift.tex}
+\input{\campaignspath/castle_greek_gift.tex}
 
 \clearpage
 
-\input{campaigns/castle_sicilian_dragon.tex}
+\input{\campaignspath/castle_sicilian_dragon.tex}
 
 \clearpage
 
-\input{campaigns/castle_two_knights_defense.tex}
+\input{\campaignspath/castle_two_knights_defense.tex}
