--- a/translations/castle_greek_gift.tex/pl.po
+++ b/translations/castle_greek_gift.tex/pl.po
@@ -136,30 +136,24 @@ msgstr ""
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: campaigns/castle_greek_gift.tex:4
-#, fuzzy
-#| msgid ""
-#| "\\phantomsection\\addcontentsline{toc}{section}{\\protect\\numberline{} "
-#| "{} {} {} {}Dungeons and Devils} \\addscenariosection[subsection]{1}"
-#| "{Inferno Campaign $-$ Dungeons and Devils}{1. A Devilish Plan}{\\images/"
-#| "firewall.png}"
 msgid ""
 "\\phantomsection\\addcontentsline{toc}{section}{\\protect\\numberline{} {} "
 "{} {} {}The Queen's Gambit} \\addscenariosection[subsection]{1}{Castle "
 "Campaign $-$ The Queen's Gambit}{1. Greek Gift}{\\images/catherine.png}"
 msgstr ""
 "\\phantomsection\\addcontentsline{toc}{section}{\\protect\\numberline{} {} "
-"{} {} {}Podziemia i Diabły} \\addscenariosection[subsection]{1}{Kampania "
-"Inferna $-$ Podziemia i Diabły}{1. Diabelski Plan}{\\images/firewall.png}"
+"{} {} {}Gambit Królowej} \\addscenariosection[subsection]{1}{Kampania Zamku "
+"$-$ Gambit Królowej}{1. Poświęcenie Greca}{\\images/catherine.png}"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:8 campaigns/castle_sicilian_dragon.tex:7
 #: campaigns/castle_two_knights_defense.tex:7
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Author:} Tyson Heckert\n"
 "\n"
 msgstr ""
-"\\textbf{Autor:} silence70011\n"
+"\\textbf{Autor:} Tyson Heckert\n"
 "\n"
 
 #. type: multicols*
@@ -170,6 +164,8 @@ msgid ""
 "\\textbf{Source:} \\href{https://travelledtales.com}{travelledtales.com}\n"
 "\n"
 msgstr ""
+"\\textbf{Źródło:} \\href{https://travelledtales.com}{travelledtales.com}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:14
@@ -180,6 +176,10 @@ msgid ""
 "While Catherine grapples with her responsibility — and her demons — she must be a bulwark against evil.}\n"
 "\n"
 msgstr ""
+"\\textit{Steadwick jest wolne, ale to nie oznacza, że jest bezpieczne.\n"
+"Ciemne moce wciąż krążą po Erathii, a jedna z nich właśnie zajmuje pozycje.\n"
+"Podczas gdy Katarzyna zmaga się ze swoimi obowiązkami i cieniami losu, musi być ostoją przeciwko złu.}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:16 campaigns/castle_sicilian_dragon.tex:14
@@ -195,18 +195,18 @@ msgstr ""
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:18
 #: campaigns/castle_two_knights_defense.tex:15
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "This Scenario plays out over 8 Rounds.\n"
 "\n"
 msgstr ""
-"Ten Scenariusz rozgrywany jest w 14 Rundach.\n"
+"Ten Scenariusz rozgrywany jest w 8 Rundach.\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:20 campaigns/castle_sicilian_dragon.tex:18
 #: campaigns/castle_two_knights_defense.tex:17
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Player setup}}\n"
 "\n"
@@ -221,29 +221,22 @@ msgid ""
 "\\textbf{Faction Hero:} Any Castle Hero. If you are not Catherine, you are in her entourage for this story.\n"
 "\n"
 msgstr ""
+"\\textbf{Bohater:} Dowolny bohater Zamku. Jeśli nie jesteś Katarzyną, należysz do jej świty w tej opowieści.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:26
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Resources:} 15 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Starting Resources:} 10 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 msgstr ""
-"\\textbf{Zasoby Początkowe:} 15 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}\n"
+"\\textbf{Zasoby Początkowe:} 10 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:33
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Units:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 2 × A Few \\svgunit{bronze} Units with the lowest Recruitment cost\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
@@ -253,14 +246,14 @@ msgid ""
 msgstr ""
 "\\textbf{Jednostki Początkowe:}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Garstka \\svgunit{bronze} Jednosek o najniższym koszcie rekrutacji\n"
+"  \\item Garstka Halabardników, Garstka Kuszników\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:37 campaigns/castle_sicilian_dragon.tex:34
 #: campaigns/castle_two_knights_defense.tex:33
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{AI Hero setup}}\n"
 "\n"
@@ -271,38 +264,32 @@ msgstr ""
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:39 campaigns/castle_sicilian_dragon.tex:36
 #: campaigns/castle_two_knights_defense.tex:35
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Faction:} Necropolis\n"
 "\n"
 msgstr ""
-"\\textbf{Frakcja:} Inferno\n"
+"\\textbf{Frakcja:} Nekroploia\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:41
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Castle Charging Army \\#1:} A Pack of Marksmen, a Pack of Elves, a Few Griffins, a Pack of Zealots, a Few Champions\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Enemy Army:} A Pack of Skeletons, a Pack of Zombies, a Few Dread Knights, a Few Ghost Dragons\n"
 "\n"
 msgstr ""
-"\\textbf{Zamek Szarżująca Armia \\#1:} Grupa Kuszników, Grupa Elfów, Garstka Gryfów, Grupa Kapłanów, Garstka Czempionów\n"
+"\\textbf{Armia Wroga:} Grupa Szkieletów, Grupa Zombie, Garstka Rycerzy Grozy, Garstka Upiornych Smoków\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:43
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Final Charging Army Deck:} 3 × Might Card, 3 × Skill Card\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Enemy Deck:} 4 x Might Cards\n"
 "\n"
 msgstr ""
-"\\textbf{Talia Ostatniej Szarżującej Armii:} 3 × Karta Mocy, 3 × Karta Umiejętności\n"
+"\\textbf{Talia Wroga:} 4 × Karta Mocy\n"
 "\n"
 
 #. type: multicols*
@@ -312,11 +299,13 @@ msgid ""
 "\\textbf{Special:} Place the Cloak of the Undead King IV and VI Cards aside\n"
 "\n"
 msgstr ""
+"\\textbf{Specjalne:} Odłóż Karty Płaszcz Króla Nieumarłych IV i VI na bok\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:47 campaigns/castle_sicilian_dragon.tex:48
 #: campaigns/castle_two_knights_defense.tex:45
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map setup}}\n"
 "\n"
@@ -326,14 +315,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:54
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{2 × Starting (I) Map Tile}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 1 × Inferno (S6)\n"
-#| "  \\item 1 × Castle (S3)\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{1 × Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
@@ -341,22 +323,15 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{2 × Początkowy (I) Kafelek Mapy}\n"
+"\\textbf{1 × Początkowy (I) Kafelek Mapy}\n"
 "\\begin{itemize}\n"
-"  \\item 1 × Inferno (S6)\n"
 "  \\item 1 × Zamek (S3)\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:59
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{2 × Near (IV--V) Map Tile}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 2 × Rampart (N7, N8)\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{3 × Far (II--III) Map Tile}\n"
 "\\begin{itemize}\n"
@@ -364,21 +339,15 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{2 × Bliski (IV--V) Kafelek Mapy}\n"
+"\\textbf{3 × Daleki (II--III) Kafelek Mapy}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Bastion (N7, N8)\n"
+"    \\item 3 x Zamek (F3, F6, F9)\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:64
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{2 × Near (IV--V) Map Tile}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 2 × Rampart (N7, N8)\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{2 × Near (IV--V) Map Tile}\n"
 "\\begin{itemize}\n"
@@ -388,14 +357,14 @@ msgid ""
 msgstr ""
 "\\textbf{2 × Bliski (IV--V) Kafelek Mapy}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Bastion (N7, N8)\n"
+"    \\item 2 x Zamek (N3, N6)\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:66 campaigns/castle_sicilian_dragon.tex:75
 #: campaigns/castle_two_knights_defense.tex:70
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Heroes placement}}\n"
 "\n"
@@ -405,41 +374,32 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:68
-#, fuzzy, no-wrap
-#| msgid ""
-#| "Place your Hero on the center Field of the S6 Inferno Starting Map Tile.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "Place your Castle Hero on the center Field of the S3 Castle starting map Tile.\n"
 "\n"
 msgstr ""
-"Umieść swojego Bohatera na środkowym Polu Początkowego Kafelka Mapy Inferno S6.\n"
+"Umieść swojego Bohatera na środkowym Polu początkowego Kafelka Mapy Zamku S3.\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:70
-#, fuzzy, no-wrap
-#| msgid ""
-#| "Place your Hero in the center Field of the Inferno Starting Map Tile.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "Place a Necropolis Hero on the center Field of the N3 Castle Tile.\n"
 "\n"
 msgstr ""
-"Umieść swojego Bohatera na środkowym polu Początkowego Kafelka Mapy Inferno.\n"
+"Umieść Bohatera Nekropolii na środkowym Polu Kafelka Zamku N3.\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:74
-#, fuzzy, no-wrap
-#| msgid ""
-#| "Defeat all invading armies.\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "Defeat the enemy army.\n"
 "\n"
 msgstr ""
-"Pokonaj wszystkie najeżdżające armie.\n"
+"Pokonaj armię wroga.\n"
 "\n"
 
 #. type: multicols*
@@ -453,16 +413,15 @@ msgid ""
 "  \\item You run out of time at the end of the 8th Round\n"
 "\\end{itemize}"
 msgstr ""
+"\\subsection*{\\MakeUppercase{Warunki Przegranej}}\n"
+"\\begin{itemize}\n"
+"  \\item Przegrywasz jakąkolwiek walki\n"
+"  \\item Kończy się czas na końcu 8. Rundy\n"
+"\\end{itemize}"
 
 #. type: multicols
 #: campaigns/castle_greek_gift.tex:92
 #, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{9} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Repeat the Timed Events of Round 6.\n"
-#| "\\end{itemize}\n"
-#| "\n"
 msgid ""
 "\\textbf{\\nth{1} Round:}\n"
 "\\begin{itemize}\n"
@@ -618,15 +577,12 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:139
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Units:}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Distant Threat}\n"
 "\n"
 msgstr ""
-"\\textbf{Jednostki początkowe:}\n"
+"\\textbf{Odległe Zagrożenie:}\n"
 "\n"
 
 #. type: multicols*
@@ -638,6 +594,10 @@ msgid ""
 "Her gaze turned to her cracked skin and mangled thumbnail, and it reminded her of how hard she had fought to be where she was.\n"
 "\n"
 msgstr ""
+"Katarzyna Ironfist potarła swoim zmęczonym kciukiem zdjęcie ojca, Króla Gryphonheart, w medalionie.\n"
+"Chciała pamiętać dobre, szlachetne części jego życia, a nie jego czyny w nieżyciu.\n"
+"Jej wzrok padł na popękaną skórę i zniekształcony paznokieć, co przypominało jej, jak ciężko walczyła, aby być tu, gdzie teraz jest.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:147
@@ -648,6 +608,10 @@ msgid ""
 "Still, with time, the stony seat of the castle would be sufficient to further liberate the realm.\n"
 "\n"
 msgstr ""
+"Ciężar Erathii spoczywał na jej barkach.\n"
+"Zaledwie tygodnie minęły od oblężenia i odzyskania Steadwick, a zasoby, jak i siła robocza, były na wyczerpaniu.\n"
+"Mimo to, z czasem kamienny tron zamku byłby wystarczający do dalszego wyzwalania królestwa.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:152
@@ -659,6 +623,11 @@ msgid ""
 "While rumors are usually best left to fishwives and children, this one aligned with information about an army growing in strength, and she dreaded the thought of the two problems colliding and crashing over her weary crown.\n"
 "\n"
 msgstr ""
+"Jeden taki problem ciążył jej w myślach.\n"
+"Odkładając medalion i chwytając wiadomość, ponownie przeczytała szczególny fragment o coraz potężniejszym nekromancie o imieniu Vhidhax.\n"
+"Plotki głosiły, że ów nikczemnik skradł cenne artefakty, które jeszcze bardziej wzmocniły jego władzę nad umarłymi.\n"
+"O ile plotki zwykle najlepiej zostawić żonom rybaków i dzieciom, ten donos pokrywał się z informacjami o rosnącej w siłę armii, a ona drżała na myśl możliwym zderzeniu się tych zagrożeń, które mogłyby złamać jej i tak już nadwyrężoną koronę.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:155
@@ -668,6 +637,9 @@ msgid ""
 "She'd just about fallen asleep in her chair when a heavy knock turned her attention to the room's large door that sported intricately carved shields from various long-gone baronies.\n"
 "\n"
 msgstr ""
+"Tej nocy, Katarzyna wylewała swoje żale Rionowi na temat żmudnej odbudowy Steadwick.\n"
+"Była już niemal zaśnięta w fotelu, gdy ciężkie uderzenie skierowało jej uwagę na ogromne drzwi sali, na których widniały kunsztownie wyrzeźbione tarcze różnych dawno już nieistniejących baronii.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:159
@@ -678,6 +650,10 @@ msgid ""
 "Instead, he merely pointed with a trembling hand toward the window across the room.\n"
 "\n"
 msgstr ""
+"Drewniane wrota rozwarły się, zanim zdążyła poderwać się z fotela, ukazując przerażonego strażnika z wybałuszonymi oczyma.\n"
+"Mężczyzna nie wydał z siebie ani słowa; to, co go przerażało, było absolutne.\n"
+"Zamiast tego, drżącą ręką wskazał w stronę okna po drugiej stronie sali.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:163
@@ -688,6 +664,10 @@ msgid ""
 "When he looked back at her with a slight wince, she only returned a stony look of resolve.\n"
 "\n"
 msgstr ""
+"Katarzyna spojrzała w stronę Riona, po czym oboje błyskawicznie ruszyli w kierunku prostokątnego otwartego okna.\n"
+"To, co zobaczyli, również ich przeraziło. Katarzyna poczuła wzbierającą beznadzieję i mocno zacisnęła dłoń na ramieniu Riona z zaskakującą siłą.\n"
+"Gdy odwrócił się do niej ze słabym grymasem, odpowiedziała mu tylko zdecydowanym spojrzeniem.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:167
@@ -698,18 +678,19 @@ msgid ""
 "A magnificently terrifying azure hue wafted from a Ghost Dragon's massive, extended wings like an ethereal heat haze.\n"
 "\n"
 msgstr ""
+"Niebezpieczeństwo ponownie zawitało do Steadwick.\n"
+"Na wzgórzu w oddali, skąd widać było bezbronnie leżące zagrody, które Katarzyna miała pod opieką, drapieżnik rozglądał się jak wilk wypatrujący owiec.\n"
+"Niesamowicie przerażający, błękitny blask rozlewał się spod ogromnych, rozpostartych skrzydeł Upiornego Smoka, niczym eteryczna fala gorąca.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:169
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Enemy Armies:}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Reverent Allies}\n"
 "\n"
 msgstr ""
-"\\textbf{Armie wroga:}\n"
+"\\textbf{Czcigodni Sojusznicy:}\n"
 "\n"
 
 #. type: multicols*
@@ -721,6 +702,10 @@ msgid ""
 "Her gaze snapped upward to catch sight of something approaching.\n"
 "\n"
 msgstr ""
+"Mimo że Katarzyna ufała swemu koniowi - walcząc z tym zahartowanym w bojach wierzchowcem, ile jej pamięć sięgała - ten drżał w niepewności, gdy zbliżali się do majestatycznego, głównego budynku osady.\n"
+"Katarzyna sama wyczuła niepokojącą, niemal świętą moc panującą w okolicy, gdy nagle dźwięk szybujących skrzydeł przykuł jej uwagę.\n"
+"Jej wzrok błyskawicznie powędrował w górę, aby dostrzec nadciągający obiekt.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:178
@@ -732,6 +717,11 @@ msgid ""
 "It caught Catherine's horse off guard, and she had to catch the reins and wrench them hard to steady herself and calm the frightened animal before it could fling her from her seat.\n"
 "\n"
 msgstr ""
+"Sylwetka szybowała nisko na tle porannego słońca.\n"
+"Katarzyna z początku sądziła, że to Gryf, widząc jedynie zarys skrzydeł.\n"
+"Jednak gdy postać się zbliżyła, stało się jasne, że to kształt uskrzydlonego mężczyzny.\n"
+"Katarzyna musiała mocno chwycić lejce i energicznie je pociągnąć, aby się ustabilizować i uspokić przerażone zwierzę, zanim to zdążyłoby ją zrzucić z siodła.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:182
@@ -742,6 +732,10 @@ msgid ""
 "While the forces behind her fell to their knees in reverence, she only nodded with stern resolve.\n"
 "\n"
 msgstr ""
+"Z błyskawiczną szybkością postać wylądowała obok nich, ukazując szczeciniastą, acz przystojną twarz młodego mężczyzny ze złotymi, kręconymi dredami i imponująco masywną brązową zbroją wyrzeźbioną na jego umięśnionym ciele.\n"
+"Był jednym ze słynnych Archaniołów, którzy pozostali w pobliżu Steadwick po zwycięstwie Katarzyny.\n"
+"Podczas gdy armia za nią upadła na kolana w hołdzie, ona jedynie skinęła głową z żelazną determinacją.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:186
@@ -752,6 +746,9 @@ msgid ""
 "I expected you might come when I spied the rot taking form in the hills.''\n"
 "\n"
 msgstr ""
+"Z głosem głębszym i bardziej donośnym niż u jakiegokolwiek mężczyzny, anioł jako pierwszy przemówił.\n"
+",,Królowo Katarzyno, spodziewałem się, że przybędziesz, gdy dostrzegłem, jak zgnilizna na wzgórzach nabiera kształtów.''\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:192
@@ -764,6 +761,12 @@ msgid ""
 "Would you join me at my side?''\n"
 "\n"
 msgstr ""
+"Catherine odpowiedziała uśmiechem.\n"
+"Miło było przekonać się, że wciąż ma sojuszników; potrzebowała więcej sił, by stawić czoła nieumarłym.\n"
+",,Miło cię widzieć, przyjacielu,'' powiedziała.\n"
+",,Wygląda na to, że Steadwick znów jest zagrożone, a ja ruszam, by wyplenić zło, zanim zdąży zapuścić korzenie.\n"
+"Czy dołączysz do mnie?''\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:198
@@ -776,6 +779,12 @@ msgid ""
 "Catherine smiled wide as she watched more angels appear, then looked back to her forces and extended an open palmed arm forward in a command to march.\n"
 "\n"
 msgstr ""
+"``Oczywiście, królowo!'' anioł wykrzyknął.\n"
+"``Jeśli połączymy siły, żadne zło nas nie zatrzyma!'' Kiedy ostatnie słowa opuściły jego krtań i zaczęły rozbrzmiewać echem, dobył swoją broń.\n"
+"Ostrze miecza zapłonęło, gdy tylko opuściło pochwę, a jego blask sprawił, że większość klęczących odwróciła wzrok.\n"
+"Zaraz potem wzbił się w powietrze i zaczął krążyć dokoła.\n"
+"Katarzyna szeroko się uśmiechnęła, obserwując pojawiających się kolejnych aniołów, a potem spojrzała na swoich żołnierzy i wyciągnęła rękę w geście rozkazu do marszu.\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:200
@@ -784,6 +793,8 @@ msgid ""
 "\\textcolor{darkcandyapplered}{Add a Few Archangels to your army.}\n"
 "\n"
 msgstr ""
+"\\textcolor{darkcandyapplered}{Dodaj Garstkę Archaniołów do swojej armii.}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:202
@@ -959,12 +970,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:272
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{center}\n"
-#| "  \\includegraphics[width=0.7\\linewidth]{\\art/coin.png}\n"
-#| "\\end{center}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{center}\n"
 "  \\framedimage[0.8\\linewidth]{\\art/ghost_dragon.jpg}\n"
@@ -972,6 +978,6 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{center}\n"
-"  \\includegraphics[width=0.7\\linewidth]{\\art/coin.png}\n"
+"  \\framedimage[0.8\\linewidth]{\\art/ghost_dragon.jpg}\n"
 "\\end{center}\n"
 "\n"
