--- a/translations/castle_sicilian_dragon.tex/pl.po
+++ b/translations/castle_sicilian_dragon.tex/pl.po
@@ -136,12 +136,12 @@ msgstr ""
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:8 campaigns/castle_sicilian_dragon.tex:7
 #: campaigns/castle_two_knights_defense.tex:7
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Author:} Tyson Heckert\n"
 "\n"
 msgstr ""
-"\\textbf{Autor:} silence70011\n"
+"\\textbf{Autor:} Tyson Heckert\n"
 "\n"
 
 #. type: multicols*
@@ -152,6 +152,8 @@ msgid ""
 "\\textbf{Source:} \\href{https://travelledtales.com}{travelledtales.com}\n"
 "\n"
 msgstr ""
+"\\textbf{Źródło:} \\href{https://travelledtales.com}{travelledtales.com}\n"
+"\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:16 campaigns/castle_sicilian_dragon.tex:14
@@ -167,7 +169,7 @@ msgstr ""
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:20 campaigns/castle_sicilian_dragon.tex:18
 #: campaigns/castle_two_knights_defense.tex:17
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Player setup}}\n"
 "\n"
@@ -178,7 +180,7 @@ msgstr ""
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:37 campaigns/castle_sicilian_dragon.tex:34
 #: campaigns/castle_two_knights_defense.tex:33
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{AI Hero setup}}\n"
 "\n"
@@ -189,18 +191,18 @@ msgstr ""
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:39 campaigns/castle_sicilian_dragon.tex:36
 #: campaigns/castle_two_knights_defense.tex:35
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Faction:} Necropolis\n"
 "\n"
 msgstr ""
-"\\textbf{Frakcja:} Inferno\n"
+"\\textbf{Frakcja:} Nekroploia\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:47 campaigns/castle_sicilian_dragon.tex:48
 #: campaigns/castle_two_knights_defense.tex:45
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map setup}}\n"
 "\n"
@@ -211,7 +213,7 @@ msgstr ""
 #. type: multicols*
 #: campaigns/castle_greek_gift.tex:66 campaigns/castle_sicilian_dragon.tex:75
 #: campaigns/castle_two_knights_defense.tex:70
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Heroes placement}}\n"
 "\n"
@@ -255,16 +257,12 @@ msgstr ""
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: campaigns/castle_sicilian_dragon.tex:3
-#, fuzzy
-#| msgid ""
-#| "\\addscenariosection[subsection]{1}{Inferno Campaign $-$ Dungeons and "
-#| "Devils}{2. Steadwick's Fall}{\\images/firewall.png}"
 msgid ""
 "\\addscenariosection[subsection]{1}{Castle Campaign $-$ The Queen's Gambit}"
 "{2. Sicilian Dragon}{\\images/catherine.png}"
 msgstr ""
-"\\addscenariosection[subsection]{1}{Kampania Inferna $-$ Podziemia i Diabły}"
-"{2. Upadek Steadwick}{\\images/firewall.png}"
+"\\addscenariosection[subsection]{1}{Kampania Zamku $-$ Gambit Królowej}{2. "
+"Smok Sycylijski}{\\images/catherine.png}"
 
 #. type: multicols*
 #: campaigns/castle_sicilian_dragon.tex:12
